FusionDev Backup1/src/objects/ET_Lists__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_ID__c</fullName>
        <label>List ID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ET Lists</label>
    <nameField>
        <label>ET Lists Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ET Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>